# eslrs

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
examples/: inbound.rs  logging_example.rs  outbound.rs
src/: api.rs  command.rs  connection.rs  error.rs  event.rs  lib.rs
src/event/: builder.rs  ext.rs  format.rs  lazy.rs  reply.rs
