[package]
name = "eslrs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", features = ["sink"]}
pin-project-lite = "0.2.16"
tokio = { version = "1.48.0", features = ["macros", "rt", "net","rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = { version = "0.1.41", optional = true }
serde_json = { version = "1.0.145", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1.41"}
env_logger = "0.11.8"
log = "0.4.28"

[features]
default = ["json", "tracing"]
json = [ "dep:serde_json" ]
tracing = [ "dep:tracing" ]
log = [ "tracing", "tracing/log" ]
