[package]
name = "eslrs"
version = "0.1.0-rc.2"
edition = "2024"
repository = "https://github.com/ash30/eslrs"
license = "Apache-2.0"
description = "ESL library for FreeSWITCH™"
keywords = ["esl", "freeswitch", "voip"]


[dependencies]
futures-util = { version = "0.3.31", features = ["sink"]}
pin-project-lite = "0.2.16"
tokio = { version = "1.48.0", features = ["macros", "rt", "net","rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = { version = "0.1.41", optional = true }
serde_json = { version = "1.0.145", optional = true }
multimap = "0.10.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1.41"}
env_logger = "0.11.8"
log = "0.4.28"
indoc = "2.0.7"

[features]
default = ["tracing"]
json = [ "dep:serde_json" ]
tracing = [ "dep:tracing" ]
log = [ "tracing", "tracing/log" ]
